2008-12-30  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Removing unused code.

	* libopenvas/store.c (store_fetch_dependencies, store_fetch_timeout,
	store_fetch_name):
	Removed. This function is never called since a long time.

	* libopenvas/store_internal.h: Removed proto for
	store_fetch_dependencies, store_fetch_name and store_fetch_timeout.

	* libopenvas/plugutils.c (plug_get_deps, plug_get_timeout,
	plug_get_name):
	Removed code that is never executed.

	TODO: Added note on the broken concept of plugutils/store
	calling each other.

2008-12-30  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas/kb.h: Comments.
	
	* libopenvas/kb.c: Transformed comments to javadoc, slight doc 
	improvements.

2008-12-30  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Reduced the middle layer of the plugin functions that do not
	use the cache.

	* libopenvas/store.c (store_plugin): Replace call of _plug_get_id()
        by plug_get_id() and dito for several other functions (see below).

	* libopenvas/plugutils_internal.h: Removed unneeded protos.

	* libopenvas/plugutils.c (plug_get_id): Moved contents of
	_plug_get_id here.
	(_plug_get_id): Removed.
	(plug_get_oid): Moved contents of _plug_get_oid here.
	(_plug_get_oid): Removed.
	(plug_get_required_keys): Moved contents of _plug_get_required_keys here.
	(_plug_get_required_keys): Removed.
	(plug_get_excluded_keys): Moved contents of _plug_get_excluded_keys here.
	(_plug_get_excluded_keys): Removed.
	(plug_get_required_ports): Moved contents of _plug_get_required_ports here.
	(_plug_get_required_ports): Removed.
	(plug_get_required_udp_ports): Moved contents of
	_plug_get_required_udp_ports here.
	(_plug_get_required_udp_ports): Removed.
	(plug_get_deps): Moved contents of _plug_get_deps here.
	(_plug_get_deps): Removed.
	(plug_get_timeout): Moved contents of _plug_get_timeout here.
	(_plug_get_timeout): Removed.
	(plug_get_name): Moved contents of _plug_get_name here.